--- a/index.css
+++ b/index.css
@@ -95,3 +95,57 @@ margin-right: 150px;
     margin-left:1150px;
     margin-top: 35px;
 }
+
+.medsos{
+  text-align: center;
+  padding: 30px 5px;
+}
+.warnatulisan {
+    color: white;
+}
+.warnatulisan a{
+    color: white;
+}
+
+.gambarmedsos1{
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
+}
+.gambarmedsos2{
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
+    margin-left: 70px;
+}
+.gambarmedsos3{
+    width: 50px;
+    height: 50px;
+    padding: 10px 7px;
+    margin-left: 40px;
+}
+.medsos ul li a:hover{
+    text-decoration: none;
+    color: white;
+}
+
+.footer{
+    background:black;
+    width: 100%;
+    height: 50px;
+   
+}
+.warnatulisanfooter {
+    color: white;
+    float: left;
+    padding: 15px 30px;
+}
+
+
+.gambarfooter{
+    width: 50px;
+    height: 35px;
+    float: right;
+    margin: 10px 0;
+    margin-right: 15px;
+}
